--- a/jennifer/about.html
+++ b/jennifer/about.html
@@ -88,16 +88,16 @@
                 <div class="content-fluid">
                     <div class="panel-tile" style="background-color:#20B2AA !important;">
                         <div class="central-content">
-                            <a href="mental.html" style="text-decoration:none;  "><h2>Read Stories</br></h2></a>
+                            <a href="stories.html" style="text-decoration:none;  "><h2>Read Stories</br></h2></a>
                             <div style="padding-top:8vh;">
-                            <button class="more-stories button-stories" style="margin:auto !important;">Learn More</button>
+                            <a href="stories.html"><button class="more-stories button-stories" style="margin:auto !important;">Learn More</button></a>
                             </div>
                         </div>
                     </div>
                     <div class="panel-tile" style="background-color:#4B0082 !important;">
                         <div class="central-content">
                             <a href="mental.html" style="text-decoration:none;"><h2>Mental Health <br>Disorders</br></h2></a>
-                            <button class="more-stories button-stories" style="margin:auto !important;">Learn More</button>
+                            <a href="mental.html"><button class="more-stories button-stories" style="margin:auto !important;">Learn More</button></a>
                         </div>
                     </div>
                 </div>
