--- a/jennifer/mentaldisorderclick-4.html
+++ b/jennifer/mentaldisorderclick-4.html
@@ -47,6 +47,30 @@
 .grid-item:hover p {
 	opacity: 1;
 }
+.more-stories-click {
+    padding-left:10vw;
+}
+@media screen and (max-width: 480px) {
+    .text-grid {
+        padding-top:0 !important;
+        padding-bottom: 100px !important;
+      
+    }
+
+    .magazine-health {
+        height: 100% !important;
+    }
+    #grid-item a h2 {
+    margin:0;
+    padding-top: 20%;
+    }
+    .eyes {
+        padding-top: 15%;
+    }
+    .grid-item {
+        height:30vh;
+    }
+}
 </style>
 <body>
     <div class="header">
@@ -127,23 +151,23 @@
 <p style="font-family:titleBold;">Types Of Sleep Disorders</p>
 <p>There are several types of sleep disorders depending on the symptoms of the individual. Some common types of sleep disorders are:</p>
 <ul>
-    <li style="font-size:20px;">Insomnia</li>
+    <li style="font-size:20px; font-family: menuFont, Arial, Helvetica, sans-serif;">Insomnia</li>
     <p>It is an inability to fall asleep or get restful sleep. It can be triggered by stress and anxiety, health problems, side effects of medications, other sleep disorders.</p>
 </ul>
 <ul>
-    <li style="font-size:20px;">Sleep bruxism</li>
+    <li style="font-size:20px; font-family: menuFont, Arial, Helvetica, sans-serif;">Sleep bruxism</li>
     <p>It is a sleep disorder in which you clench or grind your teeth. This can occur infrequently and results in headaches, flattened or chipped teeth, and jaw problems such as tightness, soreness, and difficulties chewing.</p>
 </ul>
 <ul>
-    <li style="font-size:20px;">Night Terrors</li>
+    <li style="font-size:20px; font-family: menuFont, Arial, Helvetica, sans-serif;">Night Terrors</li>
     <p>These are not simply nightmares or bad dreams. It is a state where the person often does a loud shout or scream, though the sleeper may sit up in bed and may appear awake and terrified.</p>
 </ul>
 <ul>
-    <li style="font-size:20px;">Sleep bruxism</li>
+    <li style="font-size:20px; font-family: menuFont, Arial, Helvetica, sans-serif;">Sleep bruxism</li>
     <p>It is a sleep disorder in which you clench or grind your teeth. This can occur infrequently and results in headaches, flattened or chipped teeth, and jaw problems such as tightness, soreness, and difficulties chewing.</p>
 </ul>
 <ul>
-    <li style="font-size:20px;">REM Sleep Behavior Disorder (RBD)</li>
+    <li style="font-size:20px; font-family: menuFont, Arial, Helvetica, sans-serif;">REM Sleep Behavior Disorder (RBD)</li>
     <p>This is a type of sleep disorder where a person enacts their dreams while in REM sleep. RBD predominantly affects older adults, and the associated behaviors that are often violent in nature resulting in stress and anxiety.</p>
 </ul>
 <p>All these sleep disorders reflect the symptoms faced by people. However, most people often experience these symptoms and tend to ignore it or feel hesitate in sharing it, but let us tell you that your problems are not meant to be ignored. They deserve your attention where you hold responsibility and are ready to improve on your problems. For that online therapy can yield excellent results. Recent research has highlighted how online therapy is helping people improve their sleep patterns.</p>            </div>
@@ -155,24 +179,24 @@
         </button>
     </div>
     <div class="magazine-3-3">
-        <div class="grid-item" id="grid-item" style="background-image: url('images/stories-click-image2.jpg'); background-size: cover;padding-right: 0; padding-left: 0; position: relative;">
-            <p id="text-desc" style="width: 100%; background-color: #008000; padding:0;">Students dont feel they are getting appropriate help online</p>
+        <div class="grid-item" id="grid-item" style="background-image: url('images/anxiety.jpg'); background-size: cover;padding-right: 0; padding-left: 0; position: relative;">
+            <a href="mentaldisorderclick-2.html"><p id="text-desc" style="width: 100%; background-color: #008000; padding:0;">ANXIETY</p></a>
         </div>
-        <div class="grid-item item2" id="grid-item2" style="background-image: url('images/stories-click-image3.jpg'); background-size: cover; padding-right: 0; padding-left: 0; position: relative;">
-             <p id="text-desc" style="width: 100%; background-color: #FFA500; padding:0;">Going Through the emotions</p>
+        <div class="grid-item item2" id="grid-item2" style="background-image: url('images/stress.jpg'); background-size: cover; padding-right: 0; padding-left: 0; position: relative;">
+             <a href="mentaldisorderclick-3.html"><p id="text-desc" style="width: 100%; background-color: #FFA500; padding:0;">STRESS</p></a>
         </div>
-        <div class="grid-item item2" id="grid-item2" style="background-image: url('images/stories-click-image4.jpg'); background-size: cover; padding-right: 0; padding-left: 0; position: relative;">
-            <p id="text-desc" style="width: 100%; background-color: #008000; padding:0;">test</p>
+        <div class="grid-item item2" id="grid-item2" style="background-image: url('images/sleeping_disorder.jpg'); background-size: cover; padding-right: 0; padding-left: 0; position: relative;">
+            <a href="mentaldisorderclick-4.html"><p id="text-desc" style="width: 100%; background-color: #008000; padding:0;">SLEEP DISORDER</p></a>
         </div>
     </div>
     <div class="magazine-health" style="grid-template-columns: 1.5fr 1.5fr; height:25vw;">
         <div class="text-grid" id="grid-item">
             <img src="images/help.png" class="eyes">
-            <p style="padding:0;">Get Immediate Help</p>
+            <a href="findhelp.html"><p style="padding:0;">Get Immediate Help</p></a>
         </div>
         <div class="text-grid mentalclick" id="grid-item" style="background-color:#2b45ba;">
             <a href="findtherapist.html"><h2>Find A Therapist</h2></a>
-            <button class="more-stories button-stories" style="margin:auto !important;">Connect</button>
+            <a href="findtherapist.html"><button class="more-stories button-stories" style="margin:auto !important;">Connect</button></a>
         </div>
     </div>
     <div class="footer">
