--- a/jennifer/stories-click-5.html
+++ b/jennifer/stories-click-5.html
@@ -117,13 +117,13 @@
     </div>
     <div class="magazine-3-3">
         <div class="grid-item" id="grid-item" style="background-image: url('images/stories-click-image2.jpg'); background-size: cover;padding-right: 0; padding-left: 0; position: relative;">
-            <p id="text-desc" style="width: 100%; background-color: #008000; padding:0;">Students dont feel they are getting appropriate help online</p>
+            <a href="stories-click-3.html"><p id="text-desc" style="width: 100%; background-color: #008000; padding:0;">Students dont feel they are getting appropriate help online</p></a>
         </div>
         <div class="grid-item item2" id="grid-item2" style="background-image: url('images/stories-click-image3.jpg'); background-size: cover; padding-right: 0; padding-left: 0; position: relative;">
-             <p id="text-desc" style="width: 100%; background-color: #FFA500; padding:0;">Going Through the emotions</p>
+            <a href="stories-click-2.html"><p id="text-desc" style="width: 100%; background-color: #FFA500; padding:0;">Going Through the emotions</p></a>
         </div>
-        <div class="grid-item item2" id="grid-item2" style="background-image: url('images/stories-click-image4.jpg'); background-size: cover; padding-right: 0; padding-left: 0; position: relative;">
-            <p id="text-desc" style="width: 100%; background-color: #008000; padding:0;">test</p>
+        <div class="grid-item item2" id="grid-item2" style="background-image: url('images/stories-4-atas.jpg'); background-size: cover; padding-right: 0; padding-left: 0; position: relative;">
+            <a href="stories-click-4.html"><p id="text-desc" style="width: 100%; background-color: #008000; padding:0;">Cornerstone of Recovery</p></a>
         </div>
     </div>
     <div class="footer">
