--- a/jennifer/stories.html
+++ b/jennifer/stories.html
@@ -17,11 +17,16 @@
         bottom: 0;
         left: 0;
         font-family: titleBold;
+        color:white;
     }
 
     .grid-item p {
         padding: 0;
     }
+    @media screen and (max-width: 480px) {
+       
+    }
+
 </style>
 <body>
     <div class="header">
@@ -88,36 +93,36 @@
     </div>
     <div class="magazine-health">
         <div class="grid-item" id="grid-item" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/stories-click-image1.jpg'); background-size: cover;" >
-            <p id="text-desc" style="width: 100%; background-color: #3CB371;">Navigating people to better mental health</p>
+            <a href="stories-click.html"><p id="text-desc" style="width: 100%; background-color: #3CB371; height: 30%;">Navigating people to better mental health</p></a>
             <img src="http://your-image.jpg" style="visibility: hidden;" />
         </div>
-        <div class="grid-item item2" id="grid-item2" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/stories-2-foto-atas.jpg'); background-size: cover;">
-            <p id="text-desc" style="width: 100%; background-color: #FFA500;">Going Through the emotions</p>
+        <div class="grid-item item2" id="grid-item2" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/FOTO1.jpg'); background-size: cover;">
+            <a href="stories-click-2.html"><p id="text-desc" style="width: 100%; background-color: #FFA500; height: 30%;">Going Through the emotions</p></a>
         </div>
     </div>
     <div class="magazine-3-3" style="grid-template-columns: 1fr 1fr 1fr;">
-        <div class="grid-item" id="grid-item" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/stories-3-atas.jpeg'); background-size: cover;">
-            <p id="text-desc" style="width: 100%; background-color: #0000A0;">Hope and Help</p>
+        <div class="grid-item" id="grid-item" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/FOTO2.jpeg'); background-size: cover;">
+            <a href="stories-click-3.html"><p id="text-desc" style="width: 100%; background-color: #0000A0; height: 30%;">Hope and Help</p></a>
             
         </div>
         <div class="grid-immediate" id="grid-item2">
-            <img src="images/help.png" class="eyes" style="	padding-top: 20px;">
-            <p>Get Immediate Help</p>
+            <img src="images/help.png" class="eyes" style="padding-top: 50px;">
+            <a href="findhelp.html"><p>Get Immediate Help</p></a>
         </div>
         <div class="grid-item item2" id="grid-item2" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/stories-4-atas.jpg'); background-size: cover;">
-            <p id="text-desc" style="width: 100%; background-color: yellow;">Cornerstone of recovery</p>
+            <a href="stories-click-5.html"><p id="text-desc" style="width: 100%; background-color: yellow; height: 30%;">Cornerstone of recovery</p></a>
         </div>
     </div>
     <div class="magazine-health" style="padding-top:0px;">
         <div class="grid-item" id="grid-item" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/stories-5-atas.jpg'); background-size: cover;">
-            <p id="text-desc" style="width: 100%; background-color: #008000;">Students dont feel they are getting appropriate help online</p>
+            <a href="stories-click-4.html"><p id="text-desc" style="width: 100%; background-color: #008000;">Students dont feel they are getting appropriate help online</p></a>
         </div>
         <div class="grid-immediate" id="grid-item2" style="background-color:#7851A9;">
             <p style="font-size:40px;">Mental Health <br>Disorders</br></p>
             <div class="more-stories">
-                <button class="button-stories">
+                <a href="mental.html"><button class="button-stories">
                     Learn More
-                </button>
+                </button></a>
             </div>
         </div>
     </div>
