--- a/jennifer/findtherapist.html
+++ b/jennifer/findtherapist.html
@@ -17,7 +17,7 @@
         bottom: 0;
         left: 0;
         display:flex;
-        justify-content: space-between;
+        justify-content: space-around;
         padding-top: 2%;
         padding-bottom: 2%;
     }
@@ -28,7 +28,7 @@
         display: none; 
         position: fixed; 
         z-index: 1; 
-        padding-top: 100px; 
+        padding-top: 200px; 
         left: 0;
         top: 0;
         width: 100%; 
@@ -62,6 +62,12 @@
 
     .button-stories:hover {
         text-decoration: underline;
+    }
+    @media screen and (max-width: 480px) {
+        .grid-item {
+            height:30vh;
+            background-position: center 30%;
+        }
     }
 </style>
 <body>
@@ -133,40 +139,40 @@
             <p style="font-size:20px;">We Understand, We Care, We Heal</p>
         </div>
         <div class="magazine-3-3" style="padding-top:10px;">
-            <div class="grid-item" id="grid-item" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/robert.jpg');">
-                <div id="text-desc" style="width: 100%; background-color: yellow;">
+            <div class="grid-item" id="grid-item" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/robert.jpg'); background-size: cover;">
+                <div id="text-desc" style="width: 100%; background-color: #CCCC00;">
                     <p>Robert Trivers</p>
                     <button class="more-stories button-stories booknow" style="margin:0;">Book Now</button>
                 </div>
             </div>
-            <div class="grid-item item2" id="grid-item2" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/elizabeth.jpg');">
-                <div id="text-desc" style="width: 100%; background-color: yellow;">
+            <div class="grid-item item2" id="grid-item2" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/elizabeth.jpg'); background-size: cover;">
+                <div id="text-desc" style="width: 100%; background-color: #CCCC00;">
                     <p>Elizabeth Loftus</p>
                     <button class="more-stories button-stories booknow" style="margin:0;" class="booknow">Book Now</button>
                 </div>
             </div>
-            <div class="grid-item item2" id="grid-item2" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/robert-cial.jpg');">
-                <div id="text-desc" style="width: 100%; background-color: yellow;">
+            <div class="grid-item item2" id="grid-item2" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/robert-cial.jpg'); background-size: cover;">
+                <div id="text-desc" style="width: 100%; background-color: #CCCC00;">
                     <p>Robert Cialdini</p>
                     <button class="more-stories button-stories booknow" style="margin:0;" class="booknow">Book Now</button>
                 </div>
             </div>
         </div>
         <div class="magazine-3-3">
-            <div class="grid-item" id="grid-item" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/thalia.jpg');">
-                <div id="text-desc" style="width: 100%; background-color: yellow;">
+            <div class="grid-item" id="grid-item" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/thalia.jpg'); background-size: cover;">
+                <div id="text-desc" style="width: 100%; background-color: #CCCC00;">
                     <p>Thalia Eley</p>
                     <button class="more-stories button-stories booknow" style="margin:0;" class="booknow">Book Now</button>
                 </div>
             </div>
             <div class="grid-item item2" id="grid-item2" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/stephen.jpg');">
-                <div id="text-desc" style="width: 100%; background-color: yellow;">
+                <div id="text-desc" style="width: 100%; background-color: #CCCC00;">
                     <p>Stephen Kosslyn</p>
                     <button class="more-stories button-stories booknow" style="margin:0;" class="booknow">Book Now</button>
                 </div>
             </div>
-            <div class="grid-item item2" id="grid-item2" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/barbara.jpg');">
-                <div id="text-desc" style="width: 100%; background-color: yellow;">
+            <div class="grid-item item2" id="grid-item2" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/barbara.jpg'); background-size: cover;">
+                <div id="text-desc" style="width: 100%; background-color: #CCCC00;">
                     <p>Barbara Fredrickson</p>
                     <button class="more-stories button-stories booknow" style="margin:0;" class="booknow">Book Now</button>
                 </div>
