--- a/jennifer/home.html
+++ b/jennifer/home.html
@@ -8,6 +8,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <title>Document</title>
 </head>
+<style>
+    .image.responsive-breath {
+    display: none;
+}
+</style>
 <body>
     <div class="header">
         <div class="search">
@@ -77,6 +82,12 @@
                 </p>  
             </div>
         </div>
+        <div class="flex-content responsive-breath">
+            <div class="image responsive-breath">
+                <p class="up-breath responsive-breath"><span>Breath, slow it</span><span>down & think</span><br><a href="stories.html"><button class="more-stories button-stories button-responsive" style="color:white;">Read More</button></br></a>
+                </p>  
+            </div>
+        </div>
         <div class="all-content">
             <div class="about-us">
                 <div class="content-aboutus">
@@ -89,13 +100,13 @@
                     <div class="panel-tile">
                         <div class="central-content">
                             <img src="images/help.png" class="eyes">
-                            <a href="stories.html"><h2>Get Immediate Help</h2></a>
+                            <a href="findhelp.html"><h2>Get Immediate Help</h2></a>
                         </div>
                     </div>
                     <div class="panel-tile" style="background-color:#4B0082 !important;">
                         <div class="central-content">
                             <a href="mental.html" style="text-decoration:none;"><h2>Mental Health <br>Disorders</br></h2></a>
-                            <button class="more-stories button-stories" style="margin:auto !important;">Learn More</button>
+                            <a href="mental.html"><button class="more-stories button-stories" style="margin:auto !important;">Learn More</button></a>
                         </div>
                     </div>
                 </div>
