--- a/jennifer/mental.html
+++ b/jennifer/mental.html
@@ -29,6 +29,16 @@
 	opacity: 1;
     }
 
+    @media screen and (max-width:480px) {
+        .grid-item {
+            height: 30vh;
+        }
+
+        .text-grid p {
+            padding: 2vh !important;
+        }
+    }
+
 </style>
 <body>
     <div class="header">
@@ -94,35 +104,35 @@
         </div>
     </div>
     <div class="magazine-3-3">
-        <div class="grid-item" id="grid-item" style="padding-right: 0; padding-left: 0; position: relative;">
-            <p id="text-desc"  style="width: 100%; background-color: yellow;">test</p>
+        <div class="grid-item" id="grid-item" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/stress.jpg');">
+            <a href="mentaldisorderclick-3.html"><p id="text-desc"  style="width: 100%; background-color: yellow; height: 20%; font-family: titleBold;">STRESS</p></a>
         </div>
-        <div class="grid-item item2" id="grid-item2" style="padding-right: 0; padding-left: 0; position: relative;">
-            <p id="text-desc"  style="width: 100%; background-color: yellow;">test</p>
+        <div class="grid-item item2" id="grid-item2" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/sleeping_disorder.jpg');">
+            <a href="mentaldisorderclick-4.html"><p id="text-desc"  style="width: 100%; background-color: yellow; height: 20%; font-family: titleBold;">Sleep Disorder</p></a>
         </div>
-        <div class="grid-item item2" id="grid-item2" style="padding-right: 0; padding-left: 0; position: relative;">
-            <p id="text-desc"  style="width: 100%; background-color: yellow;">test</p>
+        <div class="grid-item item2" id="grid-item2" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/anxiety.jpg');">
+            <a href="mentaldisorderclick-2.html"><p id="text-desc"  style="width: 100%; background-color: yellow; height: 20%; font-family: titleBold;">Anxiety</p></a>
         </div>
     </div>
     <div class="magazine-health">
         <div class="text-grid" id="grid-item">
             <img src="images/help.png" class="eyes">
-            <p style="padding:0; color:white;">Get Immediate Help</p>
+            <a href="findhelp.html"><p style="padding:0; color:white;">Get Immediate Help</p></a>
         </div>
-        <div class="grid-item item2" id="grid-item2" style="padding-right: 0; padding-left: 0; position: relative;">
-            <p id="text-desc"  style="width: 100%; background-color: yellow;">test</p>
+        <div class="grid-item item2" id="grid-item2" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/depressionn.jpg'); background-size: cover;">
+            <a href="mentaldisorderclick-6.html"><p id="text-desc"  style="width: 100%; background-color: yellow; height: 20%; font-family: titleBold;">Depression</p></a>
         </div>
     </div>
     <div class="magazine-health">
-        <div class="grid-item" id="grid-item" style="padding-right: 0; padding-left: 0; position: relative;">
-            <p id="text-desc"  style="width: 100%; background-color: yellow;">test</p>
+        <div class="grid-item" id="grid-item" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/anger.jpg');">
+            <a href="mentaldisorderclick-5.html"><p id="text-desc"  style="width: 100%; background-color: yellow; height: 20%; font-family: titleBold; ">Anger</p></a>
         </div>
         <div class="text-grid" id="grid-item" style="background-color:#3CB371;">
             <p style="padding:10vh; color:white;">Read Stories</p>
             <div class="more-stories">
-                <button class="button-stories" style="margin-top:0;">
+                <a href="stories.html"><button class="button-stories" style="margin-top:0;">
                     Learn More
-                </button>
+                </button></a>
             </div>
         </div>
     </div>
