--- a/jennifer/findhelp.html
+++ b/jennifer/findhelp.html
@@ -81,15 +81,13 @@
     </div>
     <div class="content-gallery">
         <div class="content-text" style="background-color:#0000A0 ">
-            <div><a href="findtheraphist.html"><h1>Find a theraphist who <br>gets you</br></h1></a></div>
+            <div><a href="findtherapist.html"><h1>Find a therapist<br>that matches with you</br></h1></a></div>
         </div>
         <div class="test-image-help" style="background-image: url('images/find-help-2.jpg'); height:60vh; background-repeat: no-repeat; background-size: 100%;">
         </div>
-        <div class="test-image-help">
-                <img src="images/find-help.jpg">
-            </div>
+        <div class="test-image-help" style="background-image: url('images/find-help.jpg'); height:60vh; background-repeat: no-repeat; background-size: 100%;"></div>       
             <div class="content-text">
-                <div><a href="#search-map"><h1>Find Help<br>near you below...</br></h1></a></div>
+                <div><a href="#search-map"><h1>Find organizations<br>near you below...</br></h1></a></div>
             </div>
         </div>
 
