--- a/jennifer/mental.html
+++ b/jennifer/mental.html
@@ -17,6 +17,7 @@
         left: 0;
         display:flex;
         justify-content: space-between;
+        padding-top: 2%;
     }
     .grid-item p {
         padding: 0;
@@ -105,13 +106,13 @@
     </div>
     <div class="magazine-3-3">
         <div class="grid-item" id="grid-item" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/stress.jpg');">
-            <a href="mentaldisorderclick-3.html"><p id="text-desc"  style="width: 100%; background-color: yellow; height: 20%; font-family: titleBold;">STRESS</p></a>
+            <a href="mentaldisorderclick-3.html"><p id="text-desc"  style="width: 100%; background-color: #3CB371; height: 20%; font-family: titleBold;">&nbsp;STRESS</p></a>
         </div>
         <div class="grid-item item2" id="grid-item2" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/sleeping_disorder.jpg');">
-            <a href="mentaldisorderclick-4.html"><p id="text-desc"  style="width: 100%; background-color: yellow; height: 20%; font-family: titleBold;">Sleep Disorder</p></a>
+            <a href="mentaldisorderclick-4.html"><p id="text-desc"  style="width: 100%; background-color: #FFA500; height: 20%; font-family: titleBold;">&nbsp;Sleep Disorder</p></a>
         </div>
         <div class="grid-item item2" id="grid-item2" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/anxiety.jpg');">
-            <a href="mentaldisorderclick-2.html"><p id="text-desc"  style="width: 100%; background-color: yellow; height: 20%; font-family: titleBold;">Anxiety</p></a>
+            <a href="mentaldisorderclick-2.html"><p id="text-desc"  style="width: 100%; background-color: #0000A0; height: 20%; font-family: titleBold;">&nbsp;Anxiety</p></a>
         </div>
     </div>
     <div class="magazine-health">
@@ -120,14 +121,14 @@
             <a href="findhelp.html"><p style="padding:0; color:white;">Get Immediate Help</p></a>
         </div>
         <div class="grid-item item2" id="grid-item2" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/depressionn.jpg'); background-size: cover;">
-            <a href="mentaldisorderclick-6.html"><p id="text-desc"  style="width: 100%; background-color: yellow; height: 20%; font-family: titleBold;">Depression</p></a>
+            <a href="mentaldisorderclick-6.html"><p id="text-desc"  style="width: 100%; background-color: yellow; height: 20%; font-family: titleBold;">&nbsp;Depression</p></a>
         </div>
     </div>
     <div class="magazine-health">
         <div class="grid-item" id="grid-item" style="padding-right: 0; padding-left: 0; position: relative; background-image: url('images/anger.jpg');">
-            <a href="mentaldisorderclick-5.html"><p id="text-desc"  style="width: 100%; background-color: yellow; height: 20%; font-family: titleBold; ">Anger</p></a>
+            <a href="mentaldisorderclick-5.html"><p id="text-desc"  style="width: 100%; background-color: #008000; height: 20%; font-family: titleBold; ">&nbsp;Anger</p></a>
         </div>
-        <div class="text-grid" id="grid-item" style="background-color:#3CB371;">
+        <div class="text-grid" id="grid-item" style="background-color:#7851A9;">
             <p style="padding:10vh; color:white;">Read Stories</p>
             <div class="more-stories">
                 <a href="stories.html"><button class="button-stories" style="margin-top:0;">
