--- a/jennifer/mentaldisorderclick.html
+++ b/jennifer/mentaldisorderclick.html
@@ -35,7 +35,10 @@
     }
     .grid-item:hover p {
 	opacity: 1;
-}
+    }
+    .more-stories-click {
+        padding-left: 14vw;
+    }
 @media screen and (max-width: 480px) {
     .text-grid {
         padding-top:0 !important;
