--- a/jennifer/findtherapist.html
+++ b/jennifer/findtherapist.html
@@ -20,6 +20,7 @@
         justify-content: space-around;
         padding-top: 2%;
         padding-bottom: 2%;
+        font-family: titleBold;
     }
     .grid-item p {
         padding: 0;
