--- a/jennifer/mentaldisorderclick-2.html
+++ b/jennifer/mentaldisorderclick-2.html
@@ -48,6 +48,9 @@
 .grid-item:hover p {
 	opacity: 1;
 }
+.more-stories-click {
+    padding-left: 11vw;
+}
 @media screen and (max-width: 480px) {
     .text-grid {
         padding-top:0 !important;
