--- a/jennifer/stories-click-2.html
+++ b/jennifer/stories-click-2.html
@@ -12,7 +12,7 @@
 <style>
     .stories-image {
 	width: 100%;
-	background-image: url('images/stories-2-foto-atas.jpg');
+	background-image: url('images/FOTO1.jpg');
 	background-size: cover;
 	height: 800px;
 	height: 45vw;
@@ -29,6 +29,9 @@
     }
 .grid-item:hover p {
 	opacity: 1;
+}
+.more-stories-click {
+    padding-left: 11vw;
 }
 </style>
 <body>
@@ -103,32 +106,28 @@
             <div class="page-container">
                 <h2>Sam Fender – Going Through the Emotions</h2>
                 <p>By Darina Mohammed</p>
-                <p>Sam Fender is a singer songwriter from North Shields. His debut album ‘Hypersonic Missiles’ </p>
-<p>showcases Sam’s astute storytelling – taking us on a journey through everything from suicide to</p>
-<p>white privilege. Its heavy themes set against a sonic backdrop reminiscent of The Strokes and The </p>
-<p>War On Drugs. We chatted and photographed Sam in Newcastle to get some insights on his own</p>
-<p>mental health.</p>
+                <p>Sam Fender is a singer songwriter from North Shields. His debut album ‘Hypersonic Missiles’ showcases Sam’s astute storytelling – taking us on a journey through everything from suicide to white privilege. Its heavy themes set against a sonic backdrop reminiscent of The Strokes and The War On Drugs. We chatted and photographed Sam in Newcastle to get some insights on his own mental health.</p>
 <p style="font-family:titleBold;">Hey Sam, for what in your life do you feel most grateful for?</p>
-<p>I am most grateful for my friends because they are wonderful.</p>
-<p>And I’ve got a really, really good group of friends, I know that’s pretty wet but – that’s really important.</p>
+<p>I am most grateful for my friends because they are wonderful.And I’ve got a really, really good group of friends, I know that’s pretty wet but – that’s really important.</p>
+<p></p>
 <h6>Family and friends man.</h6>
-<p>You choose your friends so it’s important. And I think when you actually, when you find out, I think</p>
-<p>you go through a lot of phases when you’re growing up and you hang out with a lot of people who</p>
-<p>are total cunts probably. If you are lucky enough and you actually find a good set of mates who will </p>
-<p>actually stick by you for life, that’s the most important thing. And there’s nothing I love more than</p>
-<p>getting off to go see them.</p>
+<p>You choose your friends so it’s important. And I think when you actually, when you find out, I think
+you go through a lot of phases when you’re growing up and you hang out with a lot of people who
+are total cunts probably. If you are lucky enough and you actually find a good set of mates who will 
+actually stick by you for life, that’s the most important thing. And there’s nothing I love more than
+getting off to go see them.</p>
 <p style="font-family:titleBold;">What do you do to stay mentally healthy?</p>
-<p>Do my music. It really is my therapy. I think just writing. Documenting what’s going on in my life. It’s kind of like a diary where I can unload all of the stuff that I want to talk about. And again, just</p>
-<p>looking after, it’s just the same answer really, like if you kind of try and make a conscious effort to be more selfless in your day to day life with even people on the street and friends. You know if you like</p>
-<p>smile, you know that thing where just smiling at someone a day, stuff like that. There’s a lot, you can adopt a lot of little habits like that and make it into your mantra and that makes you, probably makes you happy. I think so. I think everything’s just trial and error.</p>
+<p>Do my music. It really is my therapy. I think just writing. Documenting what’s going on in my life. It’s kind of like a diary where I can unload all of the stuff that I want to talk about. And again, just
+looking after, it’s just the same answer really, like if you kind of try and make a conscious effort to be more selfless in your day to day life with even people on the street and friends. You know if you like
+smile, you know that thing where just smiling at someone a day, stuff like that. There’s a lot, you can adopt a lot of little habits like that and make it into your mantra and that makes you, probably makes you happy. I think so. I think everything’s just trial and error.</p>
 <img src="images/stories-2-center.jpg" style="display: block; margin-right: auto; margin-left: auto;">
-<p>I think probably people will just be like ‘eat well, eat healthy food, set goals’, but I think that, was it someone saying that the main things that a person needs to be mentally stable is that you need to feel wanted or something or that you need to have a purpose? And something else. I think those </p>
-<p>things are pretty imperative to good mental health. I mean whether feeling wanted is somebody having somebody to love or having just being loved in return and purpose is well. I don’t know. You can get purpose from anything can’t you. Because even doing my music and stuff like that, that is </p>
-<p>purpose but it’s not like, I don’t think it’s as important as something like having a kid or something, that’s real. That’s purpose. That’s real responsibility. That’s life changing. I’ve got to guide this little creature through this shit storm. So, yeah. I think I would like to be good at that. That’s purpose.</p>
+<p>I think probably people will just be like ‘eat well, eat healthy food, set goals’, but I think that, was it someone saying that the main things that a person needs to be mentally stable is that you need to feel wanted or something or that you need to have a purpose? And something else. I think those
+things are pretty imperative to good mental health. I mean whether feeling wanted is somebody having somebody to love or having just being loved in return and purpose is well. I don’t know. You can get purpose from anything can’t you. Because even doing my music and stuff like that, that is
+purpose but it’s not like, I don’t think it’s as important as something like having a kid or something, that’s real. That’s purpose. That’s real responsibility. That’s life changing. I’ve got to guide this little creature through this shit storm. So, yeah. I think I would like to be good at that. That’s purpose.</p>
 <p style="font-family:titleBold;">Last one. Who inspires you and why?</p>
-<p>There are loads of people who inspire me. I don’t know. I love all my singer-songwriters, stuff like that, but when you say who inspires, I kind of instantly on autopilot go to music because we’re talking about music all the time. But I’m trying to think of maybe someone else that inspires me. I’ll </p>
-<p>come back in like a week and answer that. I don’t know. I’ve got like all the wettest answers it’s really bad. Me mam – we’re best mates (joking). I really want to say the wettest answer ever but no I’m not saying that, I can’t say that. What have I become, who am I. Let’s move on. That’s the last </p>
-<p>one. I will think about it. We’ll come back to that one.</p>
+<p>There are loads of people who inspire me. I don’t know. I love all my singer-songwriters, stuff like that, but when you say who inspires, I kind of instantly on autopilot go to music because we’re talking about music all the time. But I’m trying to think of maybe someone else that inspires me. I’ll
+come back in like a week and answer that. I don’t know. I’ve got like all the wettest answers it’s really bad. Me mam – we’re best mates (joking). I really want to say the wettest answer ever but no I’m not saying that, I can’t say that. What have I become, who am I. Let’s move on. That’s the last
+one. I will think about it. We’ll come back to that one.</p>
 
            </div>
         </div>
@@ -140,7 +139,7 @@
     </div>
     <div class="magazine-3-3">
         <div class="grid-item" id="grid-item" style="background-image: url('images/stories-click-image2.jpg'); background-size: cover;padding-right: 0; padding-left: 0; position: relative;">
-            <a href="stories-click-3.html"><p id="text-desc" style="width: 100%; background-color: #008000; padding:0;">Students dont feel they are getting appropriate help online</p></a>
+            <a href="stories-click-3.html"><p id="text-desc" style="width: 100%; background-color: #008000; padding:0;">appropriate help online</p></a>
         </div>
         <div class="grid-item item2" id="grid-item2" style="background-image: url('images/stories-click-image3.jpg'); background-size: cover; padding-right: 0; padding-left: 0; position: relative;">
             <a href="stories-click-2.html"><p id="text-desc" style="width: 100%; background-color: #FFA500; padding:0;">Going Through the emotions</p></a>
