--- a/jennifer/stories-click-3.html
+++ b/jennifer/stories-click-3.html
@@ -12,7 +12,7 @@
 <style>
     .stories-image {
 	width: 100%;
-	background-image: url('images/stories-3-atas.jpeg');
+	background-image: url('images/FOTO2.jpeg');
 	background-size: 100%;
 	height: 800px;
 	height: 45vw;
@@ -29,6 +29,9 @@
     }
 .grid-item:hover p {
 	opacity: 1;
+}
+.more-stories-click {
+    padding-left: 11vw;
 }
 </style>
 <body>
@@ -120,7 +123,7 @@
     </div>
     <div class="magazine-3-3">
         <div class="grid-item" id="grid-item" style="background-image: url('images/stories-click-image2.jpg'); background-size: cover;padding-right: 0; padding-left: 0; position: relative;">
-            <a href="stories-click-3.html"><p id="text-desc" style="width: 100%; background-color: #008000; padding:0;">Students dont feel they are getting appropriate help online</p></a>
+            <a href="stories-click-3.html"><p id="text-desc" style="width: 100%; background-color: #008000; padding:0;">appropriate help online</p></a>
         </div>
         <div class="grid-item item2" id="grid-item2" style="background-image: url('images/stories-click-image3.jpg'); background-size: cover; padding-right: 0; padding-left: 0; position: relative;">
             <a href="stories-click-2.html"><p id="text-desc" style="width: 100%; background-color: #FFA500; padding:0;">Going Through the emotions</p></a>
